--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -99,7 +99,7 @@ header {
   top: 91px;
   left: 0;
   width: 100%;
-  height: 100vh;
+  height: 100svh;
   background: #fffcf3;
   transform: translateY(-100%);
   transition: transform 0.4s ease-in-out;
@@ -220,6 +220,10 @@ header {
 }
 
 @media (max-width: 1850px) {
+  .menu-info {
+    height: 75%;
+  }
+
   header {
     padding-left: 60px;
     padding-right: 60px;
@@ -305,6 +309,6 @@ header {
 @media (max-width: 500px) {
 
   .menu-info {
-    height: 55%;
+    height: 61%;
   }
 }
