--- a/src/app/about-me/about-me.component.html
+++ b/src/app/about-me/about-me.component.html
@@ -4,14 +4,9 @@
       <div class="about-me-headline-text-img">
         <div class="text-padding" #animatedElement>
           <h1>About me</h1>
-          <p>I'm a junior Front-end developer based in Wolfhalden, Switzerland. I like turning creative ideas into
-            digital solutions. I enjoy working with designers and companies, helping them realize their ideas while
-            making sure the end product is user-friendly and visually pleasing.</p><br>
-          <p>I'm ready to take the next step in my career and find a junior web developer role that allows me to learn
-            and refine my skills. I'm excited about the opportunity to contribute my technical knowledge and creative
-            problem-solving to a collaborative team.</p><br>
-          <p>If you think I could be a good addition to your projects, I'd be happy to talk. Let's discuss how we can
-            work together to create effective and up-to-date web solutions. Feel free to get in touch!</p>
+          <p>I'm a junior front-end developer based in Wolfhalden, Switzerland. I specialize in turning creative ideas into digital solutions. I enjoy working with designers and companies to create user-friendly and visually appealing products.</p><br>
+          <p>I'm looking for a junior web developer role where I can continue to learn and refine my skills. I'm eager to contribute my technical knowledge and problem-solving abilities to a collaborative team.</p><br>
+          <p>If you think I could add value to your projects, let's connect and discuss how we can work together to create effective web solutions. Feel free to get in touch!</p>
           <div>
             <button (click)="scrollToElement('contact')">Let's talk</button>
           </div>
